<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TP4"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID" />

        <EditText
            android:id="@+id/edtId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/edt_id_description"
            android:inputType="number"
            tools:ignore="EditableContentDescCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NOMBRE PRODUCTO" />

        <EditText
            android:id="@+id/edtNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/edt_nombre_producto_description"
            android:inputType="text"
            tools:ignore="EditableContentDescCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STOCK" />

        <EditText
            android:id="@+id/edtStock"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/edt_stock_description"
            android:inputType="number"
            tools:ignore="EditableContentDescCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CATEGORIA" />

        <Spinner
            android:id="@+id/spnCategoria"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AGREGAR" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="IraModificar"
            android:text="Ir a modificar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
